--- a/index.html
+++ b/index.html
@@ -184,39 +184,39 @@
         <section id="projects">
             <h2 id="projects-title">Projects <span style="font-size: 0.6em; color: #5e7396;">Check out some of my creations</span></h2>
             <div class="project">
-                <h3>Project 1: Calculator</h3>
+                <h3>Project 1: AI-Powered Discord Chatbot</h3>
                 <p>
-                    An advanced calculator application developed using HTML, CSS, and JavaScript, featuring a user-friendly interface and capable of performing a variety of arithmetic operations with precision.
-                </p>
-                <a href="Calculator.html">View Project</a>
-            </div>
-            <div class="project">
-                <h3>Project 2: AI-Powered Discord Chatbot</h3>
-                <p>
-                    Developed an chatbot using JavaScript and TensorFlow to assist users with FAQs fueled by ChatGPT-3 for a personal discord server. Integrated natural language processing (NLP) and user question tracking to improve user interaction.
+                    Developed an chatbot using JavaScript and TensorFlow to assist users with FAQs fetched from ChatGPT-3 API for a personal discord server. Integrated natural language processing (NLP) and user question tracking to improve user interaction.
                 </p>
                 <a href="https://github.com/CamerenGreen/Personal-Discord-Chatbot">View Repo</a>
             </div>
             <div class="project">
-                <h3>Project 3: ML Based Chrome Extention</h3>
+                <h3>Project 2: ML Based Chrome Extention</h3>
                 <p>
-                    Developed an extension for Google Chrome that uses machine learning to recommend media based on the user's movie and television show history. This extension analyzes viewing patterns and preferences to suggest personalized content, enhancing the user's entertainment experience.
+                    Developed an extension for Google Chrome that uses machine learning to recommend media based on the user's movie and television show history using IMDb API. This extension analyzes viewing patterns and preferences to suggest personalized content, enhancing the user's entertainment experience.
                 </p>
                 <a href="https://github.com/KU-Software-Engineers-Club">View Repo</a>
             </div>
             <div class="project">
-                <h3>Project 4: Crypto Price Tracker</h3>
+                <h3>Project 3: Crypto Price Tracker</h3>
                 <p>
                     A cryptocurrency price tracker that provides real-time updates on the latest prices of various cryptocurrencies using. This application is built using JavaScript and CSS, and it fetches data from the CoinGecko API.
                 </p>
                 <a href="https://github.com/CamerenGreen/Crypto-Price-Tracker">View Repo</a>
             </div>
             <div class="project">
-                <h3>Project 5: Interval Timer</h3>
+                <h3>Project 4: Interval Timer</h3>
                 <p>
                     An interval timer I used for personal uses. A timer that is capable of setting up intervals for workouts, study sessions, and other activities. Built using Python.
                 </p>
                 <a href="https://github.com/CamerenGreen/Dusk-Tempo">View Repo</a>
+            </div>
+            <div class="project">
+                <h3>Project 5: Calculator</h3>
+                <p>
+                    An advanced calculator application developed using HTML, CSS, and JavaScript, featuring a user-friendly interface and capable of performing a variety of arithmetic operations with precision.
+                </p>
+                <a href="Calculator.html">View Project</a>
             </div>
             <div class="project">
                 <h3>Project 6: Personal Portfolio Website</h3>
