--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Cameren Green</title>
     <style>
         
@@ -198,6 +199,7 @@
             <a href="#projects" onclick="scrollToSection('projects')" style="display: block; padding: 10px 20px; text-align: left;">Projects</a>
             <a href="#contact" onclick="scrollToSection('contact')" style="display: block; padding: 10px 20px; text-align: left;">Contact</a>
             <a href="Cameren_Green_Resume_2025.pdf" target="_blank" style="display: block; padding: 10px 20px; text-align: left;"><i class="fa fa-file-pdf-o"></i> Resume</a>
+            <a href="https://linkedin.com/in/cameren-green-830164244" target="_blank" style="display: block; padding: 10px 20px; text-align: left;"><i style="font-size:24px" class="fa">&#xf08c;</i> LinkedIn</a>
         </div>
     </div>
     
@@ -368,7 +370,7 @@
             dropdownMenu.style.height = '60px'; // Collapse to initial height
             menuContent.style.display = 'none'; // Hide the dropdown tabs
             } else {
-            dropdownMenu.style.height = '310px'; // Expand to a fixed height
+            dropdownMenu.style.height = '350px'; // Expand to a fixed height
             menuContent.style.display = 'block'; // Show the dropdown tabs
             }
         }
