--- a/index.html
+++ b/index.html
@@ -267,28 +267,28 @@
             <div class="project">
                 <h3>AI-Powered Discord Chatbot</h3>
                 <p>
-                    Developed an chatbot using JavaScript and TensorFlow to assist users with FAQs fetched from ChatGPT-3 API for a personal discord server. Integrated natural language processing (NLP) and user question tracking to improve user interaction.
+                    Developed a chatbot using JavaScript and TensorFlow to assist users with FAQs fetched from ChatGPT-3 API for a personal discord server. Integrated natural language processing (NLP) and user question tracking to improve user interaction.
                 </p>
                 <a href="https://github.com/CamerenGreen/Personal-Discord-Chatbot">View Repo</a>
             </div>
             <div class="project">
-                <h3>ML Based Chrome Extention</h3>
+                <h3>The Flick Picker</h3>
                 <p>
-                    Developed an extension for Google Chrome that uses machine learning to recommend media based on the user's movie and television show history using IMDb API. This extension analyzes viewing patterns and preferences to suggest personalized content, enhancing the user's entertainment experience.
+                    Developed an extension for Google Chrome that uses machine learning to recommend media based on the user's movie and television show history using TMDB API. This extension analyzes viewing patterns and preferences to suggest personalized content, enhancing the user's entertainment experience.
                 </p>
-                <a href="https://github.com/KU-Software-Engineers-Club">View Repo</a>
+                <a href="https://github.com/CamerenGreen/Flick-Picker">View Repo</a>
             </div>
             <div class="project">
                 <h3>Crypto Price Tracker</h3>
                 <p>
-                    A cryptocurrency price tracker that provides real-time updates on the latest prices of various cryptocurrencies using. This application is built using JavaScript and CSS, and it fetches data from the CoinGecko API.
+                    A cryptocurrency price tracker that provides real-time updates on various cryptocurrencies' latest prices. This application is built using JavaScript and CSS, and it fetches data from the CoinGecko API.
                 </p>
                 <a href="https://github.com/CamerenGreen/Crypto-Price-Tracker">View Repo</a>
             </div>
             <div class="project">
                 <h3>Interval Timer</h3>
                 <p>
-                    An interval timer I used for personal uses. A timer that is capable of setting up intervals for workouts, study sessions, and other activities. Built using Python.
+                    An interval timer for personal uses. A timer that is capable of setting up intervals for workouts, study sessions, and other activities. Built using Python.
                 </p>
                 <a href="https://github.com/CamerenGreen/Dusk-Tempo">View Repo</a>
             </div>
