--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
     <div class="container">
         <!-- Header -->
         <header style="margin-top: 80px;">
+            <div style="height: 150px;"></div>
             <img src="KU Engineering Career Fair Spring 2025-11.jpg" alt="That's me!" style="width: 200px; height: 300px; border-radius: 10%; margin-right: 20px;">
             <h1>Cameren Green</h1>
             <p>Computer Science Major @ The University of Kansas </p>
@@ -217,7 +218,7 @@
                 View Portfolio
             </button>
         </nav>
-
+        <div style="height: 175px;"></div>
         <!-- About Section -->
         <section id="about">
             <h2>About Me</h2>
