--- a/index.html
+++ b/index.html
@@ -280,6 +280,13 @@
                 <a href="https://github.com/CamerenGreen/Flick-Picker">View Repo</a>
             </div>
             <div class="project">
+                <h3>Algorithm Visualizer</h3>
+                <p>
+                    A web tool that visually demonstrates how sorting, searching, and pathfinding algorithms work through step-by-step animations. Used to teach myself and others algorithmic concepts intuitively. More updates coming soon!
+                </p>
+                <a href="https://camerengreen.github.io/algorithm-visualizer/">View Project</a>
+            </div>
+            <div class="project">
                 <h3>Crypto Price Tracker</h3>
                 <p>
                     A cryptocurrency price tracker that provides real-time updates on various cryptocurrencies' latest prices. This application is built using JavaScript and CSS, and it fetches data from the CoinGecko API.
