--- a/index.html
+++ b/index.html
@@ -75,19 +75,19 @@
             <div class="skills-grid">
                 <div class="skill">
                     <h3>Python</h3>
-                    <p>With over <strong>three years</strong> of experience with Python in the course of my classwork and personal projects. Some of my personal projects include my <a href="#projects" onclick="scrollToSectionWithoutToggle('projects'); setTimeout(() => { document.querySelector('h3:contains(Interval Timer)').scrollIntoView({ behavior: 'smooth' }); }, 500);">Interval Timer</a> as well as many other personal projects located on my github</p>
+                    <p>With over <strong>three years</strong> of experience with Python in the course of my classwork and personal projects. Some of my personal projects include my <a href="#projects" onclick="scrollToSectionWithoutToggle('projects'); setTimeout(() => { document.querySelector('h3:contains(Interval Timer)').scrollIntoView({ behavior: 'smooth' }); }, 500);">Interval Timer</a> as well as a myriad other personal projects located on my github</p>
                 </div>
                 <div class="skill">
                     <h3>C++</h3>
-                    <p>With over <strong>two years</strong> of experience in C++, I have developed a strong foundation in object-oriented programming, data structures, and algorithms. My skills in C++ were instrumental in building projects like my <a href="#projects" onclick="scrollToSectionWithoutToggle('projects'); setTimeout(() => { document.querySelector('h3:contains(ML Based Chrome Extention)').scrollIntoView({ behavior: 'smooth' }); }, 500);">ML Based Chrome Extension</a>, where I applied my knowledge to integrate machine learning models and APIs effectively.</p>
+                    <p>With over <strong>two years</strong> of experience in C++, I have developed a strong foundation in object-oriented programming, data structures, and algorithms. My skills in C++ were instrumental in building projects like The <a href="#projects" onclick="scrollToSectionWithoutToggle('projects'); setTimeout(() => { document.querySelector('h3:contains(The Flick Picker)').scrollIntoView({ behavior: 'smooth' }); }, 500);">Flick Picker</a>, where I applied my knowledge to integrate machine learning models and APIs effectively.</p>
                 </div>
                 <div class="skill">
                     <h3>HTML / CSS / JavaScript</h3>
-                    <p>With over <strong>two years</strong> of experience in HTML, CSS, and JavaScript, I have developed and maintained responsive and dynamic websites, including this personal portfolio. This website showcases my ability to design user-friendly interfaces and implement server-side functionality effectively. Additionally, I created an advanced <a href="#projects" onclick="scrollToSectionWithoutToggle('projects'); setTimeout(() => { document.querySelector('h3:contains(Calculator)').scrollIntoView({ behavior: 'smooth' }); }, 500);">Calculator</a> application, which demonstrates my skills in building interactive web applications.</p>
+                    <p>With over <strong>two years</strong> of experience in HTML, CSS, and JavaScript, I have developed and maintained responsive and dynamic websites, including this personal portfolio. This website showcases my ability to design user-friendly interfaces and implement server-side functionality effectively. Additionally, I created advanced interactive web tools, like my <a href="#projects" onclick="scrollToSectionWithoutToggle('projects'); setTimeout(() => { document.querySelector('h3:contains(Calculator)').scrollIntoView({ behavior: 'smooth' }); }, 500);">Calculator</a> application and the <a href="#projects" onclick="scrollToSectionWithoutToggle('projects'); setTimeout(() => { document.querySelector('h3:contains(Algorithm-Visualizer)').scrollIntoView({ behavior: 'smooth' }); }, 500);">Algorithm Visualizer</a> , which clearly demonstrates my skills in building interactive web applications.</p>
                 </div>
                 <div class="skill">
                     <h3>Machine Learning / Artifical Intellegence</h3>
-                    <p>With over <strong>three years</strong> of experience in machine learning and artificial intelligence, I have developed and deployed models for various applications, including my <a href="#projects" onclick="scrollToSectionWithoutToggle('projects'); setTimeout(() => { document.querySelector('h3:contains(Project 1)').scrollIntoView({ behavior: 'smooth' }); }, 500);">AI-Powered Discord Chatbot</a> and <a href="#projects" onclick="scrollToSectionWithoutToggle('projects'); setTimeout(() => { document.querySelector('h3:contains(ML Based Chrome Extention)').scrollIntoView({ behavior: 'smooth' }); }, 500);">ML Based Chrome Extension</a>. I have experience with TensorFlow, Keras, and Scikit-learn, and I am proficient in developing and deploying machine learning models for real-world applications.</p>
+                    <p>With over <strong>three years</strong> of experience in machine learning and artificial intelligence, I have developed and deployed models for various applications, including my <a href="#projects" onclick="scrollToSectionWithoutToggle('projects'); setTimeout(() => { document.querySelector('h3:contains(Project 1)').scrollIntoView({ behavior: 'smooth' }); }, 500);">AI-Powered Discord Chatbot</a> and <a href="#projects" onclick="scrollToSectionWithoutToggle('projects'); setTimeout(() => { document.querySelector('h3:contains(The Flick Picker)').scrollIntoView({ behavior: 'smooth' }); }, 500);">The Flick-Picker</a>. I have experience with TensorFlow, Keras, and Scikit-learn, and I am proficient in developing and deploying machine learning models for real-world applications.</p>
                 </div>
                 <div class="skill">
                     <h3>Git and API tools</h3>
@@ -109,7 +109,7 @@
         <ul>
             <li><strong>Impact:</strong> Reduced response time by 35% compared to manual FAQ searches.</li>
             <li><strong>Accuracy:</strong> Achieved 88% intent recognition accuracy using NLP.</li>
-            <li><strong>Scale:</strong> Handled 100+ monthly queries in a 10-member server.</li>
+            <li><strong>Scale:</strong> Handled 100+ monthly queries in a 10+ member server.</li>
             <li><strong>Tech:</strong> JavaScript, TensorFlow, Discord API, NLP</li>
         </ul>
         <a href="https://github.com/CamerenGreen/Personal-Discord-Chatbot">View Repo</a>
@@ -138,7 +138,7 @@
         </p>
         <ul>
             <li><strong>Educational:</strong> Used by CS students at KU for exam prep, and helped me get an A in mine!</li>
-            <li><strong>Features:</strong> Visualizes 8+ algorithms (Dijkstra's, QuickSort, etc.).</li>
+            <li><strong>Features:</strong> Visualizes 10+ algorithms (Dijkstra's, QuickSort, etc.).</li>
             <li><strong>Speed Control:</strong> Adjustable animation speeds for massive sorting visualizations.</li>
             <li><strong>Tech:</strong> JavaScript, D3.js, React</li>
         </ul>
