--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </div>
                 <div class="skill">
                     <h3>Git and API tools</h3>
-                    <p>With over <strong>two years</strong> of experience using Git, Docker, and Linux through various courses and personal projects, I have developed a strong foundation in version control, containerization, operating systems, and API upkeep. I utilized Git and respective API's extensively to manage the development of my <a href="#projects" onclick="scrollToSectionWithoutToggle('projects'); setTimeout(() => { document.querySelector('h3:contains(Crypto Price Tracker)').scrollIntoView({ behavior: 'smooth' }); }, 500);">Crypto Price Tracker</a>, ensuring efficient collaboration and version control.</p>
+                    <p>With over <strong>two years</strong> of experience using Git, Docker, and Linux through various courses and personal projects, I have developed a strong foundation in version control, containerization, operating systems, and API upkeep. I utilized Git and respective API's extensively to manage the development of my <a href="#projects" onclick="scrollToSectionWithoutToggle('projects'); setTimeout(() => { document.querySelector('h3:contains(Crypto Price Tracker)').scrollIntoView({ behavior: 'smooth' }); }, 500);">Crypto Price Tracker</a> and the <a href="#projects" onclick="scrollToSectionWithoutToggle('projects'); setTimeout(() => { document.querySelector('h3:contains(VisionEQ)').scrollIntoView({ behavior: 'smooth' }); }, 500);">VisionEQ</a>, ensuring efficient collaboration and version control.</p>
                 </div>
             </div>
         </section>
@@ -117,7 +117,7 @@
 
     <!-- Project 2: The Flick Picker -->
     <div class="project">
-        <h3>The Flick Picker</h3>
+        <h3>The Flick Picker - ML Based Media Recommender Model</h3>
         <p>
             Chrome extension that recommends media based on user's viewing history using TMDB API.
         </p>
@@ -145,7 +145,23 @@
         <a href="https://camerengreen.github.io/algorithm-visualizer/">View Project Demo</a>
     </div>
 
-    <!-- Project 4: Crypto Price Tracker -->
+    <!-- Project 4: VisionEQ -->
+    <div class="project" style="margin-bottom: 50px;">
+        <h3>VisionEQ - Hand Gesture-Controlled Audio Web App</h3>
+        <p>
+            A web-based application that allows users to control audio volume and frequency using hand gestures via computer's object detection.
+        </p>
+        <ul>
+            <li><strong>Innovation:</strong> Touchless control of audio parameters (volume/frequency) through hand gestures.</li>
+            <li><strong>Precision:</strong> Detects finger positions with ±5px accuracy using MediaPipe Hands.</li>
+            <li><strong>Modes:</strong> Three intuitive control modes (Volume Control, Audio Equalizer, Lock) with real-time UI feedback.</li>
+            <li><strong>Visualization:</strong> Dynamic audio waveform and frequency spectrum rendering via Web Audio API.</li>
+            <li><strong>Tech:</strong> MediaPipe Hands, Web Audio API, Canvas API, JavaScript</li>
+        </ul>
+        <a href="https://github.com/CamerenGreen/VisionEQ">View Project Demo</a>
+    </div>
+
+    <!-- Project 5: Crypto Price Tracker -->
     <div class="project">
         <h3>Crypto Price Tracker</h3>
         <p>
@@ -160,7 +176,7 @@
         <a href="https://github.com/CamerenGreen/Crypto-Price-Tracker">View Repo</a>
     </div>
 
-    <!-- Project 5: Interval Timer -->
+    <!-- Project 6: Interval Timer -->
     <div class="project">
         <h3>Interval Timer</h3>
         <p>
@@ -175,7 +191,7 @@
         <a href="https://github.com/CamerenGreen/Dusk-Tempo">View Repo</a>
     </div>
 
-    <!-- Project 6: Calculator -->
+    <!-- Project 7: Calculator -->
     <div class="project">
         <h3>Calculator</h3>
         <p>
@@ -190,7 +206,7 @@
         <a href="Calculator.html">View Project Demo</a>
     </div>
 
-    <!-- Project 7: Personal Portfolio Website -->
+    <!-- Project 8: Personal Portfolio Website -->
     <div class="project">
         <h3>Personal Portfolio Website</h3>
         <p>
