--- a/index.html
+++ b/index.html
@@ -97,25 +97,10 @@
         </section>
 
         <!-- Projects Section -->
-<section id="projects">
+    <section id="projects">
     <h2 id="projects-title">Projects <span style="font-size: 0.6em; color: #5e7396;">Check out some of my creations</span></h2>
-    
-    <!-- Project 1: AI-Powered Discord Chatbot -->
-    <div class="project">
-        <h3>AI-Powered Discord Chatbot</h3>
-        <p>
-            Developed a chatbot using JavaScript and TensorFlow to assist users with FAQs fetched from ChatGPT-3 API for a personal discord server.
-        </p>
-        <ul>
-            <li><strong>Impact:</strong> Reduced response time by 35% compared to manual FAQ searches.</li>
-            <li><strong>Accuracy:</strong> Achieved 88% intent recognition accuracy using NLP.</li>
-            <li><strong>Scale:</strong> Handled 100+ monthly queries in a 10+ member server.</li>
-            <li><strong>Tech:</strong> JavaScript, TensorFlow, Discord API, NLP</li>
-        </ul>
-        <a href="https://github.com/CamerenGreen/Personal-Discord-Chatbot">View Repo</a>
-    </div>
 
-    <!-- Project 2: The Flick Picker -->
+    <!-- Project 1: The Flick Picker -->
     <div class="project">
         <h3>The Flick Picker - ML Based Media Recommender Model</h3>
         <p>
@@ -130,7 +115,65 @@
         <a href="https://github.com/CamerenGreen/Flick-Picker">View Repo</a>
     </div>
 
-    <!-- Project 3: Algorithm Visualizer -->
+    <!-- Project 2: VisionEQ -->
+    <div class="project" style="margin-bottom: 50px;">
+        <h3>VisionEQ - Hand Gesture-Controlled Audio Web App</h3>
+        <p>
+            A web-based application that allows users to control audio volume and frequency using hand gestures via computer's object detection.
+        </p>
+        <ul>
+            <li><strong>Innovation:</strong> Touchless control of audio parameters (volume/frequency) through hand gestures.</li>
+            <li><strong>Precision:</strong> Detects finger positions with ±5px accuracy using MediaPipe Hands.</li>
+            <li><strong>Modes:</strong> Three intuitive control modes (Volume Control, Audio Equalizer, Lock) with real-time UI feedback.</li>
+            <li><strong>Visualization:</strong> Dynamic audio waveform and frequency spectrum rendering via Web Audio API.</li>
+            <li><strong>Tech:</strong> JavaScript, HTML/CSS, APIs</li>
+        </ul>
+        <a href="https://github.com/CamerenGreen/VisionEQ">View Repo</a>
+    </div>
+
+    <!-- Project 3: Crypto Price Tracker -->
+    <div class="project">
+        <h3>BlockPulse - Crypto Price Tracker</h3>
+        <p>
+            Real-time cryptocurrency price updates using CoinGecko API.
+        </p>
+        <ul>
+            <li><strong>Data:</strong> Tracks a multitude of cryptocurrencies within a sub-200ms cold start time.</li>
+            <li><strong>Efficiency:</strong> Reduced API calls by 40% through smart caching and request batching while maintaining real-time accuracy.</li>
+            <li><strong>UI:</strong> Color-coded 24h change indicators (+/-).</li>
+            <li><strong>Tech:</strong> JavaScript, JSON, HTML/CSS, Node.js, APIs</li>
+        </ul>
+        <a href="https://github.com/CamerenGreen/Crypto-Price-Tracker">View Repo</a>
+    </div>
+
+    <div class="Project">
+        <h3>Self Operating Lidar Vehicle Braking System</h3>
+        <p>
+            Developed an embedded system prototype for autonomous vehicle functions
+        </p>
+        <li><strong>Renovation:</strong> Designed and developed a real-time measurment logic to trigger multi-level braking systems</li>
+        <li><strong>Implementation:</strong> Integrated a Deep Neural Network model from a video input via UART connection between a Raspberry Pi and HiFive board microcontroller</li>
+        <li><strong>Optimization:</strong> Augmented power consumption by 15% using duty cycling for hypothetical batter-powered deployment</li>
+        <li><strong>Leadership:</strong> pearheaded and led a 2-person team to deliver a full-stack prototype with a 100% demo success rate</li>
+        <li><strong>Tech:</strong> C, Python, Deep Neural Networks, Raspberry Pi, HiFive board</li>
+    </div>
+
+    <!-- Project 4: AI-Powered Discord Chatbot -->
+    <div class="project">
+        <h3>AI-Powered Discord Chatbot</h3>
+        <p>
+            Developed a chatbot using JavaScript and TensorFlow to assist users with FAQs fetched from ChatGPT-3 API for a personal discord server.
+        </p>
+        <ul>
+            <li><strong>Impact:</strong> Reduced response time by 35% compared to manual FAQ searches.</li>
+            <li><strong>Accuracy:</strong> Achieved 88% intent recognition accuracy using NLP.</li>
+            <li><strong>Scale:</strong> Handled 100+ monthly queries in a 10+ member server.</li>
+            <li><strong>Tech:</strong> JavaScript, TensorFlow, APIs, NLP</li>
+        </ul>
+        <a href="https://github.com/CamerenGreen/Personal-Discord-Chatbot">View Repo</a>
+    </div>
+
+    <!-- Project 5: Algorithm Visualizer -->
     <div class="project">
         <h3>Algorithm Visualizer</h3>
         <p>
@@ -145,40 +188,9 @@
         <a href="https://camerengreen.github.io/algorithm-visualizer/">View Project Demo</a>
     </div>
 
-    <!-- Project 4: VisionEQ -->
-    <div class="project" style="margin-bottom: 50px;">
-        <h3>VisionEQ - Hand Gesture-Controlled Audio Web App</h3>
-        <p>
-            A web-based application that allows users to control audio volume and frequency using hand gestures via computer's object detection.
-        </p>
-        <ul>
-            <li><strong>Innovation:</strong> Touchless control of audio parameters (volume/frequency) through hand gestures.</li>
-            <li><strong>Precision:</strong> Detects finger positions with ±5px accuracy using MediaPipe Hands.</li>
-            <li><strong>Modes:</strong> Three intuitive control modes (Volume Control, Audio Equalizer, Lock) with real-time UI feedback.</li>
-            <li><strong>Visualization:</strong> Dynamic audio waveform and frequency spectrum rendering via Web Audio API.</li>
-            <li><strong>Tech:</strong> MediaPipe Hands, Web Audio API, Canvas API, JavaScript</li>
-        </ul>
-        <a href="https://github.com/CamerenGreen/VisionEQ">View Project Demo</a>
-    </div>
-
-    <!-- Project 5: Crypto Price Tracker -->
-    <div class="project">
-        <h3>Crypto Price Tracker</h3>
-        <p>
-            Real-time cryptocurrency price updates using CoinGecko API.
-        </p>
-        <ul>
-            <li><strong>Data:</strong> Tracks a multitude of cryptocurrencies within a 1-minute refresh.</li>
-            <li><strong>Efficiency:</strong> Optimized API calls to stay under rate limits.</li>
-            <li><strong>UI:</strong> Color-coded 24h change indicators (+/-).</li>
-            <li><strong>Tech:</strong> JavaScript, CoinGecko API, Chart.js</li>
-        </ul>
-        <a href="https://github.com/CamerenGreen/Crypto-Price-Tracker">View Repo</a>
-    </div>
-
     <!-- Project 6: Interval Timer -->
     <div class="project">
-        <h3>Interval Timer</h3>
+        <h3>Personal Interval Timer</h3>
         <p>
             Python application for workout/study interval timing.
         </p>
@@ -216,8 +228,8 @@
             <li><strong>Performance:</strong> 95+ Lighthouse accessibility score.</li>
             <li><strong>Design:</strong> Fully responsive across all devices.</li>
             <li><strong>SEO:</strong> Optimized meta tags and semantic HTML.</li>
-            <li><strong>Tech:</strong> HTML5, CSS3, JavaScript</li>
-        </ul>
+            <li><strong>Tech:</strong> HTML/CSS, JavaScript</li>
+        </ul>d
         <a href="index.html">View Project</a>
     </div>
 
