--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
             <li><strong>Renovation:</strong> Designed and developed a real-time measurment logic to trigger multi-level braking systems</li>
             <li><strong>Implementation:</strong> Integrated a Deep Neural Network model from a video input via UART connection between a Raspberry Pi and HiFive board microcontroller</li>
             <li><strong>Optimization:</strong> Augmented power consumption by 15% using duty cycling for hypothetical batter-powered deployment</li>
-            <li><strong>Leadership:</strong> pearheaded and led a 2-person team to deliver a full-stack prototype with a 100% demo success rate</li>
-            <li><strong>Tech:</strong> C, Python, Deep Neural Networks, Raspberry Pi, HiFive board</li>
+            <li><strong>Leadership:</strong> Spearheaded and led a 2-person team to deliver a full-stack prototype with a 100% demo success rate</li>
+            <li><strong>Tech:</strong> C, Python, Deep Neural Networks(DNN), Raspberry Pi, HiFive board</li>
         </ul>
     </div>
 
@@ -265,7 +265,7 @@
                     </p>
                     <p>
                         <strong>Resume:</strong>
-                        <a href="Cameren_Green_Resume_2025.pdf" target="_blank">View Resume</a>
+                        <a href="Cameren_Green_Resume_S25.pdf" target="_blank">View Resume</a>
                     </p>
                 </div>
             </div>
