--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a href="#skills" onclick="scrollToSection('skills')" style="display: block; padding: 10px 20px; text-align: left;">Skills</a>
             <a href="#projects" onclick="scrollToSection('projects')" style="display: block; padding: 10px 20px; text-align: left;">Projects</a>
             <a href="#contact" onclick="scrollToSection('contact')" style="display: block; padding: 10px 20px; text-align: left;">Contact</a>
-            <a href="Cameren_Green_Resume_S25.pdf" target="_blank" style="display: block; padding: 10px 20px; text-align: left;"><i class="fa fa-file-pdf-o"></i> Resume</a>
+            <a href="Cameren_Green25262nd.pdf" target="_blank" style="display: block; padding: 10px 20px; text-align: left;"><i class="fa fa-file-pdf-o"></i> Resume</a>
             <a href="https://linkedin.com/in/cameren-green-830164244" target="_blank" style="display: block; padding: 10px 20px; text-align: left;"><i style="font-size:24px" class="fa">&#xf08c;</i> LinkedIn</a>
         </div>
     </div>
@@ -68,31 +68,20 @@
             </div>
         </section>
 
-        <!-- Skills Section -->
-        <section id="skills">
-            <h2>Skills</h2>
-            <p>Here are some of my technical skills, though I'm always working on learning more!</p>
-            <div class="skills-grid">
-                <div class="skill">
-                    <h3>Python</h3>
-                    <p>With over <strong>three years</strong> of experience with Python in the course of my classwork and personal projects. Some of my personal projects include my <a href="#projects" onclick="scrollToSectionWithoutToggle('projects'); setTimeout(() => { document.querySelector('h3:contains(Interval Timer)').scrollIntoView({ behavior: 'smooth' }); }, 500);">Interval Timer</a> as well as a myriad other personal projects located on my github</p>
-                </div>
-                <div class="skill">
-                    <h3>C++</h3>
-                    <p>With over <strong>two years</strong> of experience in C++, I have developed a strong foundation in object-oriented programming, data structures, and algorithms. My skills in C++ were instrumental in building projects like The <a href="#projects" onclick="scrollToSectionWithoutToggle('projects'); setTimeout(() => { document.querySelector('h3:contains(The Flick Picker)').scrollIntoView({ behavior: 'smooth' }); }, 500);">Flick Picker</a>, where I applied my knowledge to integrate machine learning models and APIs effectively.</p>
-                </div>
-                <div class="skill">
-                    <h3>HTML / CSS / JavaScript</h3>
-                    <p>With over <strong>two years</strong> of experience in HTML, CSS, and JavaScript, I have developed and maintained responsive and dynamic websites, including this personal portfolio. This website showcases my ability to design user-friendly interfaces and implement server-side functionality effectively. Additionally, I created advanced interactive web tools, like my <a href="#projects" onclick="scrollToSectionWithoutToggle('projects'); setTimeout(() => { document.querySelector('h3:contains(Calculator)').scrollIntoView({ behavior: 'smooth' }); }, 500);">Calculator</a> application and the <a href="#projects" onclick="scrollToSectionWithoutToggle('projects'); setTimeout(() => { document.querySelector('h3:contains(Algorithm-Visualizer)').scrollIntoView({ behavior: 'smooth' }); }, 500);">Algorithm Visualizer</a> , which clearly demonstrates my skills in building interactive web applications.</p>
-                </div>
-                <div class="skill">
-                    <h3>Machine Learning / Artifical Intellegence</h3>
-                    <p>With over <strong>three years</strong> of experience in machine learning and artificial intelligence, I have developed and deployed models for various applications, including my <a href="#projects" onclick="scrollToSectionWithoutToggle('projects'); setTimeout(() => { document.querySelector('h3:contains(Project 1)').scrollIntoView({ behavior: 'smooth' }); }, 500);">AI-Powered Discord Chatbot</a> and <a href="#projects" onclick="scrollToSectionWithoutToggle('projects'); setTimeout(() => { document.querySelector('h3:contains(The Flick Picker)').scrollIntoView({ behavior: 'smooth' }); }, 500);">The Flick-Picker</a>. I have experience with TensorFlow, Keras, and Scikit-learn, and I am proficient in developing and deploying machine learning models for real-world applications.</p>
-                </div>
-                <div class="skill">
-                    <h3>Git and API tools</h3>
-                    <p>With over <strong>two years</strong> of experience using Git, Docker, and Linux through various courses and personal projects, I have developed a strong foundation in version control, containerization, operating systems, and API upkeep. I utilized Git and respective API's extensively to manage the development of my <a href="#projects" onclick="scrollToSectionWithoutToggle('projects'); setTimeout(() => { document.querySelector('h3:contains(Crypto Price Tracker)').scrollIntoView({ behavior: 'smooth' }); }, 500);">Crypto Price Tracker</a> and the <a href="#projects" onclick="scrollToSectionWithoutToggle('projects'); setTimeout(() => { document.querySelector('h3:contains(VisionEQ)').scrollIntoView({ behavior: 'smooth' }); }, 500);">VisionEQ</a>, ensuring efficient collaboration and version control.</p>
-                </div>
+        <!-- Experience Section -->
+        <section id="experience">
+            <h2>Experience</h2>
+            <p>Here are some of my relevant experiences:</p>
+            <div class="experience">
+                <h3>Cybersecurity Intern</h3>
+                <p><strong>Company:</strong> Brites Technology Solutions</p>
+                <p><strong>Duration:</strong> September 2025 - December 2025</p>
+                <p><strong>Responsibilities:</strong></p>
+                <ul>
+                    <li>Support cybersecurity initiatives across infrastructure, data protection, and intelligence integration projects.</li>
+                    <li>Designing risk assessments, system architectures, and AI-enhanced security tools</li>
+                    <li>Created live proof-of-concept deployments under the guidance of the technical leadership team</li>
+                </ul>
             </div>
         </section>
 
@@ -235,25 +224,76 @@
         <a href="index.html">View Project</a>
     </div>
 
-    <div style="text-align: left; margin-top: 50px;">
-        <a href="https://github.com/CamerenGreen" target="_blank" style="display: inline-block; padding: 15px 30px; font-size: 1.5em; background-color: #5e7396; color: #fff; text-decoration: none; border-radius: 5px; font-weight: bold;">
+    <div style="text-align: left; margin-top: 20px;">
+        <a href="https://github.com/CamerenGreen" target="_blank" style="display: inline-block; padding: 15px 30px; font-size: 1.5em; background-color: #5e7396; color: #fff; text-decoration: none; border-radius: 3px; font-weight: bold;">
             Want to see more? Visit my GitHub
         </a>
     </div>
 </section>
 
+        <!-- Skills Section -->
+        <section id="skills">
+            <h2>Technical Skills</h2>
+            <div class="skills-grid">
+                <div class="skill">
+                    <h3>Languages</h3>
+                    <ul>
+                        <li>Python</li>
+                        <li>Java</li>
+                        <li>C/C++</li>
+                        <li>HTML / CSS</li>
+                        <li>JavaScript</li>
+                        <li>TypeScript</li>
+                        <li>SQL</li>
+                        <li>Go</li>
+                        <li>R</li>
+                        <li>MATLAB</li>
+                        <li>Assembly</li>
+                    </ul>
+                </div>
+                <div class="skill">
+                    <h3>Frameworks</h3>
+                    <ul>
+                        <li>React.js</li>
+                        <li>Node.js</li>
+                        <li>Pytorch</li>
+                        <li>Django</li>
+                        <li>Flask</li>
+                        <li>TensorFlow</li>
+                        <li>Scikit-learn</li>
+                        <li>Rest APIs</li>
+                    </ul>
+                </div>
+                <div class="skill">
+                    <h3>Cloud & Tools</h3>
+                    <ul>
+                        <li>AWS</li>
+                        <li>Docker</li>
+                        <li>Git</li>
+                        <li>Linux</li>
+                        <li>CI/CD</li>
+                    </ul>
+                </div>
+                <div class="skill">
+                    <h3>AI & Machine Learning</h3>
+                    <ul>
+                        <li>OpenAI</li>
+                        <li>Large Language Models</li>
+                        <li>Computer Vision</li>
+                        <li>Natural Language Processing</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
 
         <!-- Contact Section -->
         <section id="contact">
             <div class="container">
-                <h2>Contact Me </h2>
-                <p>
-                    <p style="text-align: center; font-size: 1.3em; color: #927d5e; font-weight: bold;">
-                    I'd love to connect with you.
-                <p>
-                    <div style="text-align: center;">
+                <h2 style="text-align: center;">Connect With Me</h2>
+                <div style="text-align: center;">
                     Feel free to reach out if you'd like to collaborate or get to know more about me!
-                </p>
+                </div>
                 <div style="text-align: center; margin-top: 20px;">
                     <p>
                         <strong>Email:</strong> 
@@ -265,7 +305,7 @@
                     </p>
                     <p>
                         <strong>Resume:</strong>
-                        <a href="Cameren_Green_Resume_S25.pdf" target="_blank">View Resume</a>
+                        <a href="Cameren_Green25262nd.pdf" target="_blank">View Resume</a>
                     </p>
                 </div>
             </div>
