--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <!-- ========== CUSTOM CSS ========== -->
-    <link rel="stylesheet" href="porttest.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- ========== NAVIGATION ========== -->
@@ -231,4 +231,5 @@
         <p>&copy; 2025 Cameren Green. All rights reserved.</p>
     </footer>
 </body>
+
 </html>
